# vscode-general

./: README.md  settings.json
C/: CMakeLists.txt  C_Project.py  Doxyfile  InitProject.py  main.cpp  readme.md
C/templates/: Server.cpp  Win32.cpp
Cpp/: .clangd  CMakeLists.txt  C_Project.py  main.cpp  readme.md
Cpp/templates/: Client.cpp
Cpp/templates/ClassDrivedWindowsApp/: MyMiniMFC.cpp  MyMiniMFC.h  main.cpp
Qt/: CMakeLists.txt  main.cpp
STM32/: STM32F103XX_FLASH.ld  arm-none-eabi.txt  startup_stm32f103xb.s
STM32/HAL/: App.ioc  CMakeLists.txt  startup_stm32f103xb.s
STM32/HAL/cmake/: gcc-arm-none-eabi.cmake
STM32/HAL/cmake/stm32cubemx/: CMakeLists.txt
STM32/Register/: Makefile  compile_commands.json  compile_flags.txt  compile_flags_json.py  main.c  startup_stm32f10x_md.s
STM32/Register/.cache/clangd/index/: _default_types.h.B29445C22BE77C04.idx  _intsup.h.EE40E438A66E4446.idx  _newlib_version.h.5ED76FE969BFCA41.idx  _stdint.h.16763DCF5AB3CD43.idx  core_cm3.h.132C23B1185F8DE8.idx  features.h.8AB4A5B5FFD1C0F3.idx  main.c.0FE168752BE613A2.idx  stdint.h.87D45F87CAC4E310.idx  stdint.h.9DC0B5FB60C5FDC4.idx  stm32f10x.h.E29865E4FD037E6C.idx  system_stm32f10x.h.E761E5F050D56901.idx
STM32/StdLib/: Makefile  STM32F103XX_FLASH.ld  compile_flags.txt  main.c
